--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= render "shared/footer" %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
